Adição do cálculo do traço em volume.

--- a/app/src/main/res/layout/activity_inserir_dados.xml
+++ b/app/src/main/res/layout/activity_inserir_dados.xml
@@ -250,6 +250,7 @@
             android:textSize="18sp" />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayoutUmidadeDaAreia"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -262,6 +263,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayoutInchamentoDaAreia"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
